# Flashback

./: .gitignore  README.md  package.json  pnpm-lock.yaml
docs/superpowers/plans/: 2026-07-06-auto-updater.md  2026-07-07-native-toast-overlay.md  2026-07-12-encoder-quality-vbr.md  2026-07-19-manual-recording-shared-pipeline.md
docs/superpowers/specs/: 2026-07-06-auto-updater-design.md  2026-07-07-native-toast-overlay-design.md  2026-07-12-encoder-quality-vbr-design.md  2026-07-19-manual-recording-shared-pipeline-design.md
scripts/: gen-latest-json.mjs  gen-latest-json.test.mjs  release.sh
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  autostart.wxs  installer.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: artwork.rs  audio.rs  capture.rs  config.rs  detect.rs  discord.rs  editor.rs  lib.rs  library.rs  overlay.rs  thumbnail.rs  toast.rs  watermark.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/capture/win/: encoder.rs  livemux.rs  mod.rs  monitors.rs
src/lib/: capture-config.svelte.ts  clips.ts  editor.svelte.ts  hotkeys.svelte.ts  i18n.svelte.ts  library.svelte.ts  menu.svelte.ts  replay-sound.svelte.ts  replay.svelte.ts  theme.svelte.ts  updater.svelte.ts
src/lib/components/: ClipCard.svelte  Editor.svelte  Icon.svelte  LibraryFilter.svelte  WatermarkToggle.svelte  WindowControls.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/favoritos/: +page.svelte
src/routes/juegos/: +page.svelte
src/routes/settings/: +page.svelte
